[package]
name = "overheat-rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "dynamic_linking"
]}
bevy-inspector-egui = { version = "0.26.0" }
lightyear = { path = "crates/lightyear/lightyear", features = [ 
    "steam",
    "leafwing",
    "avian2d",
] }
serde = { version = "1.0.0" }
bevy_sprite3d = { version = "3.0.0" }
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_screen_diagnostics = "0.6"
leafwing-input-manager = { version = "0.15.0" }
clap = { version = "4.4.5", features = ["derive"]}
avian2d = { version = "0.1.1", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
    "serialize"
]}